kagi-mcp/src/format/snapshots/kagi_mcp__format__search__tests__when_format_search_with_html_entities_in_snippet_then_should_decode.snap
---
source: kagi-mcp/src/format/search.rs
expression: "format_search_markdown(&response).unwrap().replace(\"\\r\\n\", \"\\n\")"
---
## Web Results

1. [Example](https://example.com)
   - Snippet: It's great & amazing.
