kagi-mcp/src/format/snapshots/kagi_mcp__format__search__tests__when_format_search_with_iso_timestamp_in_time_then_should_render_date_only.snap
---
source: kagi-mcp/src/format/search.rs
expression: "format_search_markdown(&response).unwrap().replace(\"\\r\\n\", \"\\n\")"
---
## Web Results

1. **[Example](https://example.com)**
   - Published: 2024-03-15
