kagi-mcp/src/format/snapshots/kagi_mcp__format__search__tests__when_image_has_null_title_then_should_render_untitled.snap
---
source: kagi-mcp/src/format/search.rs
expression: "format_search_markdown(&response).unwrap().replace(\"\\r\\n\", \"\\n\")"
---
## Images

1. [(untitled)](https://example.com/page)
   - Image: https://example.com/image.jpg (800x600)
