kagi-mcp/src/format/snapshots/kagi_mcp__format__search__tests__when_news_result_has_paywalled_and_language_then_should_render_both.snap
---
source: kagi-mcp/src/format/search.rs
expression: "format_search_markdown(&response).unwrap().replace(\"\\r\\n\", \"\\n\")"
---
## News

1. [Breaking Story](https://example.com/story)
   - Snippet: Latest updates.
   - Published: 2024-06-01
   - Language: de
   - Paywalled: true
