kagi-mcp/src/format/snapshots/kagi_mcp__format__search__tests__when_podcast_has_duration_then_should_render_duration.snap
---
source: kagi-mcp/src/format/search.rs
expression: "format_search_markdown(&response).unwrap().replace(\"\\r\\n\", \"\\n\")"
---
## Podcasts

1. [Great Podcast](https://example.com/podcast)
   - Snippet: An amazing episode.
   - Duration: 1:10:14
