kagi-mcp/src/format/snapshots/kagi_mcp__format__search__tests__when_search_data_is_empty_then_should_return_no_results.snap
---
source: kagi-mcp/src/format/search.rs
expression: "format_search_markdown(&response).replace(\"\\r\\n\", \"\\n\")"
---
No results found.
