kagi-mcp/src/format/snapshots/kagi_mcp__format__search__tests__when_search_has_adjacent_question_then_should_format_related_questions.snap
---
source: kagi-mcp/src/format/search.rs
expression: "format_search_markdown(&response).unwrap().replace(\"\\r\\n\", \"\\n\")"
---
## Related Questions

1. **What is the meaning of life?**
    - [Answer](https://example.com/answer): The answer is 42.
