kagi-mcp/src/format/snapshots/kagi_mcp__format__search__tests__when_search_has_adjacent_question_without_question_prop_then_should_fallback.snap
---
source: kagi-mcp/src/format/search.rs
expression: "format_search_markdown(&response).unwrap().replace(\"\\r\\n\", \"\\n\")"
---
## Related Questions

1. Unknown Question
    - [Answer](https://example.com/faq): Some answer text.
