kagi-mcp/src/format/snapshots/kagi_mcp__format__search__tests__when_search_has_consecutive_duplicate_passages_then_should_dedup.snap
---
source: kagi-mcp/src/format/search.rs
expression: "format_search_markdown(&response).unwrap().replace(\"\\r\\n\", \"\\n\")"
---
## Web Results

1. [Paris](https://www.britannica.com/place/Paris)
   - Snippet: Paris, city and capital of France, located along the Seine River, in the north-central part of the country. Paris is one of the world's most important and attractive cities, famed for its gastronomy, haute couture, painting, literature, and intellectual community. Learn more about Paris in this article.
